--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
-        "target": "es5",
+        "target": "ES2015",
         "outDir": "dist",
+        "types": ["jquery"]
     }
 }
