--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "lint": "eslint . --ext .ts"
   },
   "repository": {
     "type": "git",
@@ -22,17 +22,16 @@
   },
   "homepage": "https://github.com/khassanboi/match-game#readme",
   "dependencies": {
-    "eslint": "^7.27.0",
-    "jquery": "^3.6.0",
-    "path": "^0.12.7",
-    "webpack": "^5.39.1",
-    "webpack-cli": "^4.7.2"
+    "eslint-plugin-import": "^2.22.0"
   },
   "devDependencies": {
-    "@types/jquery": "^3.5.5",
-    "html-loader": "^2.1.2",
-    "html-webpack-plugin": "^5.3.1",
-    "ts-loader": "^9.2.3",
+    "@typescript-eslint/eslint-plugin": "^4.27.0",
+    "@typescript-eslint/parser": "^4.27.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-typescript": "^12.3.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "prettier": "^2.3.1",
     "typescript": "^4.3.4"
   }
 }
