--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
-    "compilerOptions": {
-        "target": "ES2015",
-        "outDir": "dist",
-        "types": ["jquery"]
-    }
+  "compilerOptions": {
+    "target": "ES2015",
+    "outDir": "dist"
+  }
 }
