--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "A game of  matching pairs",
   "main": "app.ts",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "eslint . --ext .ts",
+    "lint": "eslint . --fix --ext .ts",
     "build": "webpack"
   },
   "repository": {
